--- a/assets/pug/layout/header/header.pug
+++ b/assets/pug/layout/header/header.pug
@@ -33,7 +33,7 @@ header.fixed.top-0(class="z-[6] xl:w-full 4xl:w-[calc(100%_-_14.375rem)] w-[calc
         ul.profile-box.flex.items-center 
           li(class="cursor-pointer pr-[11px] rtl:pr-unset rtl:!pl-[11px] rtl:last:pl-0 rtl:last:pr-unset last:pr-0 sm:pr-0 sm:border-none last:border-none rtl:border-l rtl:border-r-0 border-r border-border-2 dark:border-border-dark  dark:border-r flex items-center")  
             include ./language-dropdown    
-          li(class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center")
+          li(class="cursor-pointer language-border flex- pl-[11px]  rtl:first:pr-0 first:pl-0 flex items-center")
             include ./profile-box    
     include ./sub-header    
 // Page Header end
