--- a/assets/pug/pages/template/badge.pug
+++ b/assets/pug/pages/template/badge.pug
@@ -197,7 +197,7 @@ html(lang='en')
                           |      &lt;div class="w-1 h-1 bg-current rounded-full"&gt;&lt;/div&gt;
                           |      &lt;span class="leading-none"&gt; Secondary &lt;/span&gt;  
                           |    &lt;/div&gt;
-                          |    &lt;div class="flex flex-wrap items-center gap-2 text-white rounded-full badge bg-nnfo badge-md"&gt; 
+                          |    &lt;div class="flex flex-wrap items-center gap-2 text-white rounded-full badge bg-info badge-md"&gt; 
                           |      &lt;div class="w-1 h-1 bg-current rounded-full"&gt;&lt;/div&gt;
                           |      &lt;span class="leading-none"&gt; Info &lt;/span&gt;  
                           |    &lt;/div&gt;
