--- a/assets/pug/pages/template/ecommerce.pug
+++ b/assets/pug/pages/template/ecommerce.pug
@@ -173,7 +173,7 @@ html(lang='en')
                                             div(class="min-w-[40px]")    
                                                 div.activity-dot-secondary
                                             div.flex.flex-col.gap-1
-                                                span.text-title.text-xs.relative(class="before:content-[''] recent-activity-date before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:before:right-[-40%] before:bg-border-light before:top-1/2 before:w-[calc(100%_-_55px)]") 25 Oct,2022
+                                                span.text-title.text-xs.relative(class="before:content-[''] recent-activity-date before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:before:right-[-40%] before:bg-border-light before:top-[45%] before:w-[calc(100%_-_55px)]") 25 Oct,2022
 
                                         li.flex.gap-4(class="pb-6 last:pb-0") 
                                             div.relative
