--- a/assets/pug/pages/template/progress.pug
+++ b/assets/pug/pages/template/progress.pug
@@ -117,19 +117,19 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-col gap-2"&gt;
                           |    &lt;div class="progress-bar dark:bg-border-dark"&gt;
-                          |        &lt;div class="leading-[1.2] bg-primary text-[0.5625rem] font-bold text-center" style="width:0%"&gt;&lt;/div&gt;
+                          |        &lt;div class="leading-[1.2] bg-primary text-[0.5625rem] font-bold text-center" style="width:0%"&gt; 0% &lt;/div&gt;
                           |    &lt;/div&gt;
                           |     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-                          |        &lt;div class="leading-[1.2] bg-secondary text-[0.5625rem] font-bold text-center" style="width:10%"&gt;&lt;/div&gt;
+                          |        &lt;div class="leading-[1.2] bg-secondary text-[0.5625rem] font-bold text-center" style="width:10%"&gt; 10% &lt;/div&gt;
                           |    &lt;/div&gt;
                           |     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-                          |        &lt;div class="leading-[1.2] bg-info text-[0.5625rem] font-bold text-center" style="width:40%"&gt;&lt;/div&gt;
+                          |        &lt;div class="leading-[1.2] bg-info text-[0.5625rem] font-bold text-center" style="width:40%"&gt;40%&lt;/div&gt;
                           |    &lt;/div&gt;
                           |     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-                          |        &lt;div class="leading-[1.2] bg-success text-[0.5625rem] font-bold text-center" style="width:70%"&gt;&lt;/div&gt;
+                          |        &lt;div class="leading-[1.2] bg-success text-[0.5625rem] font-bold text-center" style="width:70%"&gt;70%&lt;/div&gt;
                           |    &lt;/div&gt;
                           |     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-                          |        &lt;div class="leading-[1.2] bg-warning text-[0.5625rem] font-bold text-center" style="width:100%"&gt;&lt;/div&gt;
+                          |        &lt;div class="leading-[1.2] bg-warning text-[0.5625rem] font-bold text-center" style="width:100%"&gt;100%&lt;/div&gt;
                           |    &lt;/div&gt;
                           |&lt;/div&gt;
             div.col-span-6(class="2md:col-span-12")  
