--- a/html/template/badge.html
+++ b/html/template/badge.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer language-border flex- pl-[11px]  rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -1194,7 +1194,7 @@
      &lt;div class="w-1 h-1 bg-current rounded-full"&gt;&lt;/div&gt;
      &lt;span class="leading-none"&gt; Secondary &lt;/span&gt;  
    &lt;/div&gt;
-   &lt;div class="flex flex-wrap items-center gap-2 text-white rounded-full badge bg-nnfo badge-md"&gt; 
+   &lt;div class="flex flex-wrap items-center gap-2 text-white rounded-full badge bg-info badge-md"&gt; 
      &lt;div class="w-1 h-1 bg-current rounded-full"&gt;&lt;/div&gt;
      &lt;span class="leading-none"&gt; Info &lt;/span&gt;  
    &lt;/div&gt;
