--- a/html/template/button.html
+++ b/html/template/button.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer language-border flex- pl-[11px]  rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -1302,7 +1302,7 @@
                             <use href="../../assets/svg/sprite.svg#Heart"> </use>
                           </svg> Likes
                         </button>
-                        <button class="btn btn-secondary text-white flex justify-center items-center gap-2">  Wishlist   
+                        <button class="btn btn-secondary text-white flex justify-center items-center gap-2">  Wishlist
                           <svg class="w-[1.125rem] h-[1.125rem] stroke-white"> 
                             <use href="../../assets/svg/sprite.svg#Heart"> </use>
                           </svg>
