--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -391,7 +391,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer language-border flex- pl-[11px]  rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -1591,7 +1591,7 @@
                       <div class="min-w-[40px]">   
                         <div class="activity-dot-secondary"></div>
                       </div>
-                      <div class="flex flex-col gap-1"><span class="text-title text-xs relative before:content-[''] recent-activity-date before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:before:right-[-40%] before:bg-border-light before:top-1/2 before:w-[calc(100%_-_55px)]">25 Oct,2022</span></div>
+                      <div class="flex flex-col gap-1"><span class="text-title text-xs relative before:content-[''] recent-activity-date before:absolute before:h-[2px] before:left-[-40%] rtl:left-unset rtl:before:right-[-40%] before:bg-border-light before:top-[45%] before:w-[calc(100%_-_55px)]">25 Oct,2022</span></div>
                     </li>
                     <li class="flex gap-4 pb-6 last:pb-0"> 
                       <div class="relative"><img class="min-w-[40px] h-[40px] rounded-full" src="../../assets/images/avatar/41.png" alt="avatar"></div>
