--- a/html/template/progress.html
+++ b/html/template/progress.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer language-border flex- pl-[11px]  rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -1115,19 +1115,19 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-col gap-2"&gt;
    &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="leading-[1.2] bg-primary text-[0.5625rem] font-bold text-center" style="width:0%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-primary text-[0.5625rem] font-bold text-center" style="width:0%"&gt; 0% &lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="leading-[1.2] bg-secondary text-[0.5625rem] font-bold text-center" style="width:10%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-secondary text-[0.5625rem] font-bold text-center" style="width:10%"&gt; 10% &lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="leading-[1.2] bg-info text-[0.5625rem] font-bold text-center" style="width:40%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-info text-[0.5625rem] font-bold text-center" style="width:40%"&gt;40%&lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="leading-[1.2] bg-success text-[0.5625rem] font-bold text-center" style="width:70%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-success text-[0.5625rem] font-bold text-center" style="width:70%"&gt;70%&lt;/div&gt;
    &lt;/div&gt;
     &lt;div class="progress-bar dark:bg-border-dark"&gt;
-       &lt;div class="leading-[1.2] bg-warning text-[0.5625rem] font-bold text-center" style="width:100%"&gt;&lt;/div&gt;
+       &lt;div class="leading-[1.2] bg-warning text-[0.5625rem] font-bold text-center" style="width:100%"&gt;100%&lt;/div&gt;
    &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
