--- a/assets/pug/pages/template/avatars.pug
+++ b/assets/pug/pages/template/avatars.pug
@@ -73,22 +73,22 @@ html(lang='en')
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |     &lt;div class="rounded w-28"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="w-24 rounded"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="w-20 rounded"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="w-16 rounded"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |&lt;/div&gt;  
@@ -127,22 +127,22 @@ html(lang='en')
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="rounded-none avatar"&gt;
                           |     &lt;div class="w-28 "&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar rounded-xl"&gt;
                           |      &lt;div class="w-24"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar rounded-3xl"&gt;
                           |      &lt;div class="w-20"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt; 
                           |    &lt;div class="rounded-full avatar"&gt;
                           |      &lt;div class="w-16"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |&lt;/div&gt;
@@ -185,25 +185,25 @@ html(lang='en')
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |     &lt;div class="relative overflow-visible rounded w-28"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-offline"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative w-24 overflow-visible rounded"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-online"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative w-20 overflow-visible rounded"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-online"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative w-16 overflow-visible rounded"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-dnd"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
@@ -262,12 +262,12 @@ html(lang='en')
                           |    &lt;div class="items-center justify-center avatar-group"&gt;
                           |     &lt;div class="border-white avatar rounded-xl hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
                           |      &lt;div class="w-24"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;/div&gt;
                           |     &lt;/div&gt;
                           |      &lt;div class="border-white avatar rounded-xl hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
                           |      &lt;div class="w-20"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;/div&gt;
                           |     &lt;/div&gt;
                           |      &lt;div class="border-white avatar rounded-xl hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
@@ -278,12 +278,12 @@ html(lang='en')
                           |     &lt;div class="items-center justify-center avatar-group"&gt;
                           |     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
                           |      &lt;div class="w-20"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;/div&gt;
                           |     &lt;/div&gt;
                           |      &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
                           |      &lt;div class="w-16"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;/div&gt;
                           |     &lt;/div&gt;
                           |      &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
@@ -294,12 +294,12 @@ html(lang='en')
                           |     &lt;div class="items-center justify-center avatar-group"&gt;
                           |     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
                           |      &lt;div class="w-12"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;/div&gt;
                           |     &lt;/div&gt;
                           |     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
                           |      &lt;div class="w-12"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;/div&gt; 
                           |     &lt;/div&gt;
                           |     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
@@ -453,31 +453,31 @@ html(lang='en')
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative overflow-visible rounded w-14"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-online animate-ping"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative w-12 overflow-visible rounded"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-online animate-ping"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative overflow-visible rounded w-11"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-dnd animate-ping"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt; 
                           |    &lt;div class="avatar"&gt;
                           |      &lt;div class="relative w-10 overflow-visible rounded"&gt;
-                          |        &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |        &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-offline"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="avatar"&gt;
                           |     &lt;div class="relative overflow-visible rounded w-9"&gt;
-                          |       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+                          |       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
                           |       &lt;div class="status-offline animate-ping"&gt;&lt;/div&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
@@ -605,7 +605,7 @@ html(lang='en')
                           |      +SVG_ICON("Heart","w-[3.125rem] h-[3.125rem] 2sm:w-[2.25rem] 2sm:h-[2.25rem] 
                           |       stroke-white bg-warning p-[10px]")
                           |      &lt;/div&gt;
-                          |    &lt;/div&gt;
+                          |    &lt;/div&gt; 
                           |&lt;/div&gt;
         // Page Body End 
         +footer("sm:flex-col flex sm:gap-1 gap-2 items-center justify-between py-[1.1875rem] shadow-footer bg-white px-body-space mt-card-gap")
