--- a/html/template/avatars.html
+++ b/html/template/avatars.html
@@ -393,7 +393,7 @@
                     </div>
                     <!-- Language End -->
                   </li>
-                  <li class="cursor-pointer flex- pl-[11px] rtl:pr-[11px] rtl:pl-unset rtl:first:pr-0 first:pl-0 flex items-center">
+                  <li class="cursor-pointer language-border flex- pl-[11px]  rtl:first:pr-0 first:pl-0 flex items-center">
                     <!-- Profile Start -->
                     <div class="dropdown"> 
                       <div class="flex items-center gap-[10px] cursor-pointer"> 
@@ -1056,22 +1056,22 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="rounded w-28"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="w-24 rounded"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="w-20 rounded"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="w-16 rounded"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
 &lt;/div&gt;  </code></pre>
@@ -1115,22 +1115,22 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="rounded-none avatar"&gt;
     &lt;div class="w-28 "&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar rounded-xl"&gt;
      &lt;div class="w-24"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar rounded-3xl"&gt;
      &lt;div class="w-20"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt; 
    &lt;div class="rounded-full avatar"&gt;
      &lt;div class="w-16"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/27.jpg" alt="avatar"/&gt;
      &lt;/div&gt;
    &lt;/div&gt;
 &lt;/div&gt;</code></pre>
@@ -1182,25 +1182,25 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="relative overflow-visible rounded w-28"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
       &lt;div class="status-offline"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative w-24 overflow-visible rounded"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
       &lt;div class="status-online"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative w-20 overflow-visible rounded"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
       &lt;div class="status-online"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative w-16 overflow-visible rounded"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/21.jpg" alt="avatar"/&gt;
       &lt;div class="status-dnd"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
@@ -1267,12 +1267,12 @@
    &lt;div class="items-center justify-center avatar-group"&gt;
     &lt;div class="border-white avatar rounded-xl hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
      &lt;div class="w-24"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
      &lt;div class="border-white avatar rounded-xl hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
      &lt;div class="w-20"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
      &lt;div class="border-white avatar rounded-xl hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
@@ -1283,12 +1283,12 @@
     &lt;div class="items-center justify-center avatar-group"&gt;
     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
      &lt;div class="w-20"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
      &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
      &lt;div class="w-16"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
      &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
@@ -1299,12 +1299,12 @@
     &lt;div class="items-center justify-center avatar-group"&gt;
     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
      &lt;div class="w-12"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
      &lt;div class="w-12"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;/div&gt; 
     &lt;/div&gt;
     &lt;div class="border-white avatar hover:translate-y-[-5px] hover:transition-all hover:ease translate-y-0 dark:border-border-dark"&gt;
@@ -1476,31 +1476,31 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative overflow-visible rounded w-14"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;div class="status-online animate-ping"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative w-12 overflow-visible rounded"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;div class="status-online animate-ping"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
      &lt;div class="relative overflow-visible rounded w-11"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;div class="status-dnd animate-ping"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt; 
    &lt;div class="avatar"&gt;
      &lt;div class="relative w-10 overflow-visible rounded"&gt;
-       &lt;img src="../../image.jpg" alt="avatar"/&gt;
+       &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;div class="status-offline"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="avatar"&gt;
     &lt;div class="relative overflow-visible rounded w-9"&gt;
-      &lt;img src="../../image.jpg" alt="avatar"/&gt;
+      &lt;img src="../../assets/images/avatar/20.jpg" alt="avatar"/&gt;
       &lt;div class="status-offline animate-ping"&gt;&lt;/div&gt;
      &lt;/div&gt;
    &lt;/div&gt;
@@ -1662,7 +1662,7 @@
      +SVG_ICON("Heart","w-[3.125rem] h-[3.125rem] 2sm:w-[2.25rem] 2sm:h-[2.25rem] 
       stroke-white bg-warning p-[10px]")
      &lt;/div&gt;
-   &lt;/div&gt;
+   &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
